--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "next-videos": "^1.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -18,6 +19,15 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "@react-three/drei": "^9.88.4",
+    "@react-three/fiber": "^8.15.4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "framer-motion": "^10.16.4",
+    "maath": "^0.10.4",
+    "react-intersection-observer": "^9.5.2",
+    "three": "^0.157.0"
   }
 }
