--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.4",
     "next": "14.0.4",
     "next-videos": "^1.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.15.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "framer-motion": "^10.16.4",
     "maath": "^0.10.4",
+    "postcss": "^8",
     "react-intersection-observer": "^9.5.2",
+    "tailwindcss": "^3.3.0",
     "three": "^0.157.0"
   }
 }
