--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.4",
     "next-videos": "^1.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@react-three/drei": "^9.88.4",
