--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-videos": "^1.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
